--- a/views/adminLTE/edit_produk.ejs
+++ b/views/adminLTE/edit_produk.ejs
@@ -55,7 +55,7 @@
                     <label>Deskripsi Produk</label>
                     <textarea class="col-md-4 form-control" rows="3" placeholder="Enter ..." name="des_produk"><%= data[i].des_product %>"</textarea>
                   </div>
-                  <img src="/public/images/<%= data[i].gambar_produk %>" width="70" height="140" /
+                  <img src="/public/images/<%= data[i].gambar_produk %>" width="70" height="140" />
                   <div class="form-group">                  
                     <label for="exampleInputFile">Image Upload</label>                  
                     <input type="file" name="image" id="exampleInputFile" />
